--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -51,3 +51,7 @@ button {
 img {
   height: 100%;
 }
+
+input:invalid {
+    box-shadow: none;
+}
