--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -10,7 +10,9 @@
   display: -webkit-flex;
   display: -moz-box;
   display: -ms-flexbox;
+
   flex-direction: column;
+
   display: block;
   position: absolute;
 
@@ -57,17 +59,19 @@
       font-weight: 300;
       line-height: 22px;
 
-      display: flex;
       display: -webkit-flex;
       display: -moz-box;
       display: -ms-flexbox;
+      display: flex;
+
       flex-direction: row;
-      align-items: center;
-      align-items: center;
+
       -webkit-box-align: center;
       -webkit-align-items: center;
       -moz-box-align: center;
       -ms-flex-align: center;
+      align-items: center;
+
       justify-content: space-between;
       -webkit-justify-content: space-between;
 
